tests/cases/borrowing/errors/field-borrow-conflict.ari
struct Pair {
  mut left: i64,
  mut right: i64,
}

fn inspect(value: ref i64) -> i64 {
  return 0;
}

fn main() -> i64 {
  var pair = Pair { left: 1, right: 2 };
  let left_ref = ref pair.left;
  let unique = ref mut pair.left;
  return inspect(left_ref);
}
